# mikrom-py

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CI_CD.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  LOGGING_IMPLEMENTATION.md  Makefile  README.md  TESTING.md  VM_GUIDE.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  run_beat.py  run_worker.py
alembic/: env.py
alembic/versions/: 191cd2b28b8b_add_ippool_tables_for_ip_management.py  413818ea977d_add_vm_model.py  5f5496bbef36_initial_migration.py
docs/: CELERY_DEPLOYMENT.md  CELERY_MIGRATION.md  CELERY_TROUBLESHOOTING.md  CELERY_USAGE.md  CI_TROUBLESHOOTING.md  DEPLOYMENT_GUIDE.md  DOCKER_OPTIMIZATION.md  GIT_HOOKS.md  LOGGING_IMPLEMENTATION.md  LOGGING_TESTS_SUMMARY.md  STATUS.md  VM_GUIDE.md
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  postgres-deployment.yaml  postgres-service.yaml  secrets.example.yaml  service.yaml
mikrom/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  main.py
mikrom/api/: deps.py
mikrom/clients/: firecracker.py  ippool.py
mikrom/core/: __init__.py  exceptions.py  security.py
mikrom/events/: __init__.py  publisher.py  sse.py
mikrom/middleware/: logging.py  rate_limit.py
mikrom/models/: __init__.py  base.py  ip_allocation.py  (+3 more)
scripts/: IMPLEMENTATION.md  README.md  check_firecracker_status.py  cleanup_firecracker_dirs.py  create_superuser.py  delete_orphan_vm.py  examples.sh  quick-logging-test.sh  quickstart.sh  test-logging-full.sh  test-logging.sh  test-vm-lifecycle.sh
tests/: conftest.py  test_makefile.sh
(+40 files in other folders)
